--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="action_settings">Cerrar Sesion</string>
     <string name="title_activity_medicos">Medicos</string>
     <string name="title_activity_paciente">Paciente</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
